--- a/css/popup.css
+++ b/css/popup.css
@@ -1,10 +1,10 @@
 html {
-    height: 320px;
+    height: 350px;
 }
 
 body {
     width: 480px;
-    height: 305px;
+    height: 335px;
     color: #333;
     font-family: helvetica;
     font-size: 12px;
@@ -38,12 +38,12 @@ ul .item-title {
 
 #suggest {
     display: inline-block;
-    margin: 5px 0 0 5px;
+    margin: 5px 0 0 8px;
 }
 
 #suggest a {
-    margin: 0 3px;
-    float: left;
+    display: inline-block;
+    margin: 0 3px 3px 0;
 }
 
 #suggest a.selected {
@@ -58,7 +58,7 @@ ul .item-title {
     position: absolute;
     width: 100%;
     margin: 80px auto;
-    height: 165px;
+    height: 195px;
     background-color: #FFF;
     z-index: 20;
     text-align: center;
@@ -67,7 +67,7 @@ ul .item-title {
 #login-window {
     position: absolute;
     width: 100%;
-    height: 240px;
+    height: 270px;
     background-color: #FFF;
     z-index: 10;
 }
