--- a/css/options.css
+++ b/css/options.css
@@ -6,29 +6,44 @@ body {
     padding: 0;
 }
 
-header, section {
-  padding: .5em 5%;
-}
 header {
-  background: #efefef;
-  border-bottom: 1px solid #ccc;
+    padding: 16px 5%;
+    background: #efefef;
+    border-bottom: 1px solid #ccc;
 }
+
+header h1 {
+    height: 24px;
+    margin: 0;
+    padding: 12px 60px;
+    background: url("../img/appicon-48.png") transparent no-repeat 0 50%;
+}
+
+section {
+    padding: 1.5em 5%;
+}
+
 header + section {
-  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 span.checkbox {
-  display: block;
-  float: left;
-  width: 3em;
-  height: 3em;
-  vertical-align: top;
+    display: inline-block;
+    width: 1.5em;
+    height: 14px;
+    vertical-align: middle;
+}
+span.checkbox input {
+    margin: 0;
 }
 
 .meta {
-  color: #999;
+    display: block;
+    color: #999;
+    height: 12px;
+    padding-left: 1.5em;
 }
 
 p {
-    height: 25px;
+    margin: 0 0 12px 0;
 }
